Modify Travis config to include MiniTest 4

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ rvm:
   - "1.9.3"
   - "2.0.0"
   - jruby-19mode
+install: bundle install && env ADAPTER=minitest_4 bundle install
 env:
   SPEC_OPTS="--format progress"
-# uncomment this line if your project needs to run something other than `rake`:
-# script: bundle exec rspec spec
