--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,4 @@ rvm:
   - "1.9.3"
   - "2.0.0"
   - jruby-19mode
-install: bundle install && env ADAPTER=minitest_4 bundle install
-env:
-  SPEC_OPTS="--format progress"
+script: rake
