--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 notifications:
-  email:
-    recipients:
-      - rr@ml.commit-email.info
+  webhooks:
+    - https://webhook.commit-email.info/
 language: ruby
 before_install:
   - gem update bundler
