--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
   - pull_request
 
 jobs:
-  test:
+  ruby:
     name: "Ruby ${{ matrix.ruby-version }}"
     runs-on: ubuntu-latest
     strategy:
@@ -21,5 +21,24 @@ jobs:
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: "${{ matrix.ruby-version }}"
+      - run: bundle install
+      - run: bundle exec rake test
+
+  integration:
+    name: "${{ matrix.integration }}"
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        integration:
+          - "minitest"
+          - "minitest-active-support"
+    env:
+      RR_INTEGRATION: "${{ matrix.integration }}"
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "3.0"
       - run: bundle install
       - run: bundle exec rake test
