--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,7 @@ jobs:
           - "2.7"
           - "3.0"
           - "head"
+          - "truffleruby-head"
     steps:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
