--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,7 @@ name: Release
 
 on:
   push:
-    tags:
-      - "*"
+  pull_request:
 
 jobs:
   github:
@@ -17,8 +16,9 @@ jobs:
           ruby \
             -e 'print("## RR "); \
                 puts(ARGF.read.split(/^## /)[1].gsub(/ {.+?}/, ""))' \
-            CHANGES.md > release-note.md
+            CHANGES.md | tee release-note.md
       - name: Upload to release
+        if: github.ref_type == 'tag'
         run: |
           title=$(head -n1 release-note.md | sed -e 's/^## //')
           tail -n +2 release-note.md > release-note-without-version.md
@@ -28,3 +28,23 @@ jobs:
             --title "${title}"
         env:
           GH_TOKEN: ${{ github.token }}
+
+  rubygems:
+    name: RubyGems
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    permissions:
+      id-token: write
+    environment: release
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ruby
+          bundler-cache: true
+      - uses: rubygems/configure-rubygems-credentials@v1.0.0
+        if: github.ref_type == 'tag'
+      - name: Push gems
+        if: github.ref_type == 'tag'
+        run: |
+          bundle exec rake release:rubygem_push
